# DB_Project_hh_companies_jobopenings

./: main.py  pyproject.toml  readme.md
data/: employers_list.json  list.json  openings.json
src/: configuration.py  connector_class.py  database.ini  db_handler_class.py  db_manager.py
